modif style card

--- a/assets/sass/components/_main.scss
+++ b/assets/sass/components/_main.scss
@@ -1,6 +1,6 @@
 main {
-    @include box(100%,85dvh);
-    overflow-y: scroll;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 main::-webkit-scrollbar {
