--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -564,9 +564,8 @@ footer ul li a {
 }
 
 main {
-  width: 100%;
-  height: 85dvh;
-  overflow-y: scroll;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 main::-webkit-scrollbar {
@@ -708,6 +707,40 @@ header::before {
   width: 100%;
   height: 30px;
   background: linear-gradient(180deg, var(--colorBackground) 10%, rgba(0, 0, 0, 0) 100%);
+}
+
+.shop__card {
+  margin: 20px;
+  width: 200px;
+}
+.shop__card img {
+  width: 200px;
+  height: auto;
+  background-color: #333;
+}
+.shop__card .card__details {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 14px;
+  margin-top: 10px;
+}
+.shop__card .card__details .card__details--name {
+  padding: 5px;
+}
+.shop__card .card__details .card__details--name .detail__name {
+  font-weight: bold;
+}
+.shop__card .card__details .card__details--name .detail__price {
+  font-weight: 300;
+}
+.shop__card .card__details button {
+  width: -moz-fit-content;
+  width: fit-content;
+  height: -moz-min-content;
+  height: min-content;
+  padding: 10px;
+  font-size: 12px;
 }
 
 body {
