--- a/assets/php/css/style.css
+++ b/assets/php/css/style.css
@@ -517,7 +517,6 @@ template {
 :root {
   --background:#111827;
   --background2:#3b82f6;
-  --background3:#271692;
   --text:#e5e7eb;
   --text2:#2563eb;
 }
@@ -553,76 +552,27 @@ html[data-theme="dark"] {
 }
 footer {
   width: 100%;
-  padding: 30px;
-  /*ul{
-      display: flex;
-      list-style-type: none;
-      padding: 20px 0;
-
-      li{
-          margin: 0 10px;
-
-          a{
-              text-decoration: none;
-              color: #fff;
-          }
-      }
-  }*/
+  display: flex;
+  justify-content: center;
+  border-top: 1px solid #fff;
+  background-color: #000;
+}
+footer ul {
+  display: flex;
+  list-style-type: none;
+  padding: 20px 0;
+}
+footer ul li {
+  margin: 0 10px;
+}
+footer ul li a {
+  text-decoration: none;
+  color: #fff;
 }
 
 main {
+  display: flex;
   flex-wrap: wrap;
-}
-@media only screen and (min-width: 500px) {
-  main {
-    flex-direction: row;
-  }
-}
-main #title {
-  width: 400px;
-  margin-left: 10%;
-}
-main #title h2 {
-  font-size: 4rem;
-}
-main #seeOurStore {
-  padding: 10px;
-  border-radius: 5px;
-  background: linear-gradient(90deg, var(--background2) 0%, var(--background3) 100%);
-  margin-bottom: 25px;
-}
-main #seeOurStore:hover {
-  transform: scale(110%);
-}
-main #logo {
-  position: relative;
-  margin: auto;
-  width: 450px;
-  height: 450px;
-  background-image: url("../images/shoe_one.png");
-}
-main #logo p {
-  z-index: -1;
-  font-size: 16rem;
-  color: var(--background);
-  text-shadow: 0px 0px 1px var(--text);
-}
-main h3 {
-  width: 80%;
-  margin-left: 10%;
-}
-main #bestQuality #logo2 {
-  margin-top: 50px;
-  width: 250px;
-  height: 250px;
-  background-image: url("../images/shoe_two.png");
-}
-main #bestQuality h2 {
-  font-size: 3rem;
-  width: 80%;
-}
-main #bestQuality p {
-  width: 90%;
 }
 
 main::-webkit-scrollbar {
@@ -639,7 +589,7 @@ main::-webkit-scrollbar-thumb {
   border: solid 7px var(--colorBackground);
 }
 
-.flexCenterCenter, footer, main {
+.flexCenterCenter {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -651,7 +601,7 @@ main::-webkit-scrollbar-thumb {
   align-items: center;
 }
 
-.flexBetweenCenter, nav, header section {
+.flexBetweenCenter, header nav, header section {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -669,7 +619,7 @@ main::-webkit-scrollbar-thumb {
   align-items: center;
 }
 
-.flexColumnCenterCenter, main #title, main #bestQuality {
+.flexColumnCenterCenter {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -697,7 +647,7 @@ main::-webkit-scrollbar-thumb {
   align-items: flex-start;
 }
 
-.absoluteCenter, main #logo p {
+.absoluteCenter {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -710,21 +660,28 @@ main::-webkit-scrollbar-thumb {
   left: 0;
 }
 
-.backgroundImageDefault, main #logo, main #bestQuality #logo2 {
+.backgroundImageDefault {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
 
-.pointer, nav div, main #seeOurStore, header section img, header section div {
+.pointer, header nav div, header section img, header section div {
   cursor: pointer;
   transition: 0.3s;
 }
 
 header {
   flex-wrap: wrap;
-  height: 150px;
+  height: 75px;
   padding: 0px 3% 0px 3%;
+}
+header nav {
+  width: 300px;
+}
+header nav div:hover {
+  transform: scale(110%);
+  color: var(--text2);
 }
 header section {
   width: 75px;
@@ -776,28 +733,8 @@ header section div:hover {
   font-size: 12px;
 }
 
-nav {
-  width: 300px;
-}
-nav div:hover {
-  transform: scale(110%);
-  color: var(--text2);
-}
-
 body {
   font-family: Ubuntu;
   color: var(--text);
   background-color: var(--background);
-}
-
-.divSexy {
-  opacity: 0.1;
-  margin: 0% 10% 25px 10%;
-  width: 80%;
-  height: 1px;
-  border-bottom: solid 1px var(--text);
-}
-
-.blue {
-  color: var(--text2);
 }/*# sourceMappingURL=style.css.map */
