--- a/assets/sass/design/_colors.scss
+++ b/assets/sass/design/_colors.scss
@@ -1,6 +1,7 @@
 :root {
     --background:#111827;
     --background2:#3b82f6;
+    --background3:#271692;
 
     --text:#e5e7eb;
     --text2:#2563eb;
