--- a/assets/sass/components/_footer.scss
+++ b/assets/sass/components/_footer.scss
@@ -1,20 +1,22 @@
 footer {
     width: 100%;
-    display: flex;
-    justify-content: center;
-    border-top: 1px solid #fff;
-    background-color: #000;
-    ul{
+    padding:30px;
+    
+    @extend .flexCenterCenter;
+
+    /*ul{
         display: flex;
         list-style-type: none;
-        padding: 20px 0 ;
+        padding: 20px 0;
+
         li{
             margin: 0 10px;
+
             a{
                 text-decoration: none;
                 color: #fff;
             }
         }
-    }
+    }*/
 
 }
