--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -9,6 +9,8 @@ body {
     font-family: Ubuntu;
     color:var(--text);
     background-color: var(--background);
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
 
 .divSexy {
