--- a/assets/sass/components/_card.scss
+++ b/assets/sass/components/_card.scss
@@ -1,10 +1,16 @@
 .shop__card{
     margin: 20px;
-    width: 200px;
+    width: 300px;
     img{
-        width: 200px;
-        height: auto;
-        background-color: #333; //couleur a changer
+        width: 100%;
+        height: 200px;
+        object-fit: contain;
+        background-color: #33333314; //couleur a changer
+        transition: 0.3s;
+    }
+    img:hover {
+        transform: scale(120%);
+        filter:saturate(250%) ;
     }
     .card__details{
         display: flex;
@@ -26,8 +32,18 @@
         button{
             width: fit-content;
             height:min-content;
-            padding: 10px;
+            padding: 15px 15px;
             font-size: 12px;
+            color:var(--text);
+            background-color: var(--background2);
+            border: none;
+            border-radius: 5px;
+            @extend .pointer;
+        }
+        button:hover {
+            transform: scale(110%);
+            color:var(--background);
+            background-color: var(--text);
         }
     }
 }
