--- a/assets/sass/components/_main.scss
+++ b/assets/sass/components/_main.scss
@@ -11,6 +11,10 @@ main {
         @extend .flexColumnCenterCenter;
         h2 {
             font-size: 4rem;
+            text-align: center;
+            @include responsive(950px) {
+                text-align: start;
+            }
         }
     }
 
@@ -24,6 +28,7 @@ main {
     #seeOurStore:hover {
         transform:scale(110%);
     }
+
     #logo {
         position:relative;
         margin: auto;
@@ -34,9 +39,12 @@ main {
         p {
             z-index: -1;
             @extend .absoluteCenter;
-            font-size: 16rem;
+            font-size: 40vw;
             color:var(--background);
             text-shadow: 0px 0px 1px var(--text);
+            @include responsive(950px) {
+                font-size: 20vw;
+            }
         }
     }
 
@@ -58,23 +66,21 @@ main {
         h2 {
             font-size: 3rem;
             width:80%;
+            text-align: center;
+            @include responsive(950px) {
+                width:30%;
+            }
         }
 
         p {
             width:90%;
+            text-align: start;
+            @include responsive(950px) {
+                width:40%;
+                text-align: center;
+            }
         }
     }
     
 }
 
-main::-webkit-scrollbar {
-    width: 20px;
-}
-main::-webkit-scrollbar-track {
-    background: var(--colorBackground);
-}
-main::-webkit-scrollbar-thumb {
-    background-color: var(--colorText);
-    border-radius: 20px;
-    border:solid 7px var(--colorBackground);
-}
