--- a/assets/sass/components/_main.scss
+++ b/assets/sass/components/_main.scss
@@ -48,7 +48,7 @@ main {
         }
     }
 
-    h3 {
+    .ourLastProducts {
         width:80%;
         margin-left: 10%;
     }
@@ -78,6 +78,44 @@ main {
             @include responsive(950px) {
                 width:40%;
                 text-align: center;
+            }
+        }
+    }
+
+    #testimonials {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        @include box(100%,auto);
+        margin-top: 100px;
+        margin-bottom: 25px;
+        @include responsive(1500px) {
+            flex-direction: row;
+        }
+
+        .testimonialCard {
+            @include box(80%,100%);
+            margin-top: 25px;
+            @include responsive(1400px) {
+                width:60%;
+                margin-top: 0;
+            }
+            @include responsive(1000px) {
+                width:25%;
+            }
+            @extend .flexColumnBetweenCenter;
+            .portrait {
+                border-radius: 50%;
+                height: 100px;
+            }
+            .testimonialName {
+                margin-top: 25px;
+                text-align: center;
+            }
+            p {
+                margin-top: 25px;
+                width:100%;
             }
         }
     }
