--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -726,7 +726,7 @@ main #bestQuality p {
   background-size: cover;
 }
 
-.pointer, nav div, .shop__card .card__details button, main #seeOurStore, header h1, header section img, header section div {
+.pointer, .shop__cart #confirm, nav div, .shop__card .card__details button, main #seeOurStore, header h1, header section img, header section div {
   cursor: pointer;
   transition: 0.3s;
 }
@@ -839,6 +839,49 @@ main::-webkit-scrollbar-thumb {
   border-radius: 20px;
 }
 
+.shop__cart {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.shop__cart #cart {
+  width: 75%;
+  border-radius: 5px;
+}
+.shop__cart #cart .cart__list {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+}
+.shop__cart #cart .cart__list .cart__list__description {
+  display: flex;
+  align-items: center;
+}
+.shop__cart #cart .cart__list .cart__list__description img {
+  width: 75px;
+  margin-right: 20px;
+}
+.shop__cart #confirm {
+  width: -moz-fit-content;
+  width: fit-content;
+  height: -moz-min-content;
+  height: min-content;
+  padding: 15px 15px;
+  font-size: 12px;
+  color: var(--text);
+  background-color: var(--background2);
+  border: none;
+  border-radius: 5px;
+}
+.shop__cart #confirm:hover {
+  transform: scale(110%);
+  color: var(--background);
+  background-color: var(--text);
+}
+
 body {
   font-family: Ubuntu;
   color: var(--text);
@@ -857,4 +900,4 @@ body {
 
 .blue {
   color: var(--text2);
-}/*# sourceMappingURL=style.css.map */
+}
