--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -727,7 +727,7 @@ main #testimonials .testimonialCard p {
   align-items: center;
 }
 
-.flexColumnCenterCenter, main #title, main #bestQuality {
+.flexColumnCenterCenter, main #about, main #title, main #bestQuality {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -774,7 +774,7 @@ main #testimonials .testimonialCard p {
   background-size: cover;
 }
 
-.pointer, nav div, .shop__card .card__details button, main #seeOurStore, header h1, header section img, header section div {
+.pointer, main #about .socials .linkedin, main #about .socials .github, nav div, .shop__card .card__details button, main #seeOurStore, header h1, header section img, header section div {
   cursor: pointer;
   transition: 0.3s;
 }
@@ -887,10 +887,49 @@ main::-webkit-scrollbar-thumb {
   border-radius: 20px;
 }
 
+main #about {
+  width: 60%;
+  height: auto;
+  margin: 50px 0px 50px 0px;
+}
+main #about .teamTitle {
+  font-size: 5vw;
+}
+main #about .socials .github {
+  display: inline;
+  height: 25px;
+  filter: invert(94%) sepia(3%) saturate(814%) hue-rotate(197deg) brightness(104%) contrast(84%);
+}
+main #about .socials .github:hover {
+  transform: scale(110%);
+  filter: invert(31%) sepia(99%) saturate(3070%) hue-rotate(215deg) brightness(95%) contrast(94%);
+}
+main #about .socials .linkedin {
+  display: inline;
+  height: 25px;
+}
+main #about .socials .linkedin:hover {
+  transform: scale(110%);
+  filter: invert(31%) sepia(99%) saturate(3070%) hue-rotate(215deg) brightness(95%) contrast(94%);
+}
+main #about .teamName {
+  margin-top: 50px;
+}
+
+html {
+  height: 100%;
+  background: linear-gradient(180deg, var(--background) 0%, black 100%);
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+  overflow: hidden;
+}
+
 body {
+  height: 100%;
+  min-height: 100dvh;
   font-family: Ubuntu;
   color: var(--text);
-  background-color: var(--background);
   overflow-x: hidden;
   overflow-y: scroll;
 }
