--- a/assets/sass/components/_main.scss
+++ b/assets/sass/components/_main.scss
@@ -95,7 +95,8 @@ main {
         }
 
         .testimonialCard {
-            @include box(80%,100%);
+            width:80%;
+            height: 100%;
             margin-top: 25px;
             @include responsive(1400px) {
                 width:60%;
