--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -3,12 +3,20 @@
 @import "design/_design_dir";
 @import "components/_components_dir";
 
-
+html {
+    height: 100%;
+    background: linear-gradient(180deg, var(--background) 0%, black 100%);
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    overflow: hidden;
+}
 
 body {
+    height: 100%;
+    min-height: 100dvh;
     font-family: Ubuntu;
     color:var(--text);
-    background-color: var(--background);
     overflow-x: hidden;
     overflow-y: scroll;
 }
