--- a/assets/sass/components/_shopCart.scss
+++ b/assets/sass/components/_shopCart.scss
@@ -3,6 +3,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    span{
+        @extend .pointer;
+    }
     #cart{
         width: 75%;
         border-radius: 5px;
@@ -15,17 +18,31 @@
             .cart__list__description{
                 display: flex;
                 align-items: center;
+                width: 40%;
+                .list--divBtn{
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: center;
+                }
                 img{
                     width: 75px;
-                    margin-right: 20px;
+                    margin: 0 10px;
+                }
+            }
+            .cart__list__price{
+                display: flex;
+                span{
+                    margin-left: 10px;
                 }
             }
         }
     }
-    #confirm{
+    button{
         width: fit-content;
         height:min-content;
         padding: 15px 15px;
+        margin: 20px;
         font-size: 12px;
         color:var(--text);
         background-color: var(--background2);
@@ -33,7 +50,7 @@
         border-radius: 5px;
         @extend .pointer;
     }
-    #confirm:hover{
+    button:hover{
         transform: scale(110%);
         color:var(--background);
         background-color: var(--text);
