--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -579,16 +579,21 @@ main {
   }
 }
 main #title {
-  width: 400px;
+  width: 450px;
   margin-left: 10%;
 }
 main #title h2 {
-  font-size: 4rem;
+  font-size: 3.5rem;
   text-align: center;
 }
 @media only screen and (min-width: 950px) {
   main #title h2 {
     text-align: start;
+  }
+}
+@media only screen and (min-width: 600px) {
+  main #title h2 {
+    font-size: 5rem;
   }
 }
 main #seeOurStore {
@@ -609,9 +614,15 @@ main #seeOurStore:hover {
 main #logo {
   position: relative;
   margin: auto;
-  width: 450px;
-  height: 450px;
+  width: 300px;
+  height: 300px;
   background-image: url("../images/shoe_one.png");
+}
+@media only screen and (min-width: 850px) {
+  main #logo {
+    width: 600px;
+    height: 600px;
+  }
 }
 main #logo p {
   z-index: -1;
@@ -630,12 +641,18 @@ main .ourLastProducts {
 }
 main #bestQuality #logo2 {
   margin-top: 50px;
-  width: 250px;
-  height: 250px;
+  width: 200px;
+  height: 200px;
   background-image: url("../images/shoe_two.png");
 }
+@media only screen and (min-width: 850px) {
+  main #bestQuality #logo2 {
+    width: 350px;
+    height: 350px;
+  }
+}
 main #bestQuality h2 {
-  font-size: 3rem;
+  font-size: 3.5rem;
   width: 80%;
   text-align: center;
 }
@@ -672,7 +689,7 @@ main #testimonials {
 main #testimonials .testimonialCard {
   width: 80%;
   height: 100%;
-  margin-top: 25px;
+  margin: 10px;
 }
 @media only screen and (min-width: 1400px) {
   main #testimonials .testimonialCard {
@@ -849,6 +866,7 @@ header section div:hover {
      object-fit: contain;
   background-color: rgba(51, 51, 51, 0.0784313725);
   transition: 0.3s;
+  filter: saturate(50%);
 }
 .shop__card img:hover {
   transform: scale(120%);
