--- a/assets/sass/components/_shopCart.scss
+++ b/assets/sass/components/_shopCart.scss
@@ -12,22 +12,51 @@
         .cart__list{
             width: 100%;
             display: flex;
+            flex-direction: column;
             justify-content: space-between;
             align-items: center;
             padding: 10px;
+            @include responsive(768px){
+                flex-direction: row;
+            }
             .cart__list__description{
                 display: flex;
+                flex-direction: column-reverse;
                 align-items: center;
+                flex-wrap: wrap;
+                justify-content: center;
                 width: 40%;
+                text-align: center;
+                position: relative;
+                @include responsive(768px){
+                    flex-wrap: nowrap;
+                    flex-direction: row;
+                }
                 .list--divBtn{
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: center;
-                    align-items: center;
+                    position: absolute;
+                    top: 96.5%;
+                    width: 220%;
+                    @include responsive(768px){
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: center;
+                        align-items: center;
+                        position: relative;
+                        width: fit-content;
+                    }
+                    span{
+                        margin: 5px 45px;
+                        @include responsive(768px){
+                            margin: 5px;
+                        }
+                    }
                 }
                 img{
-                    width: 75px;
+                    width: 100px;
                     margin: 0 10px;
+                    @include responsive(768px){
+                        width: 75px;
+                    }
                 }
             }
             .cart__list__price{
