--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -936,6 +936,22 @@ main::-webkit-scrollbar-thumb {
   background-color: var(--text);
 }
 
+#add__popup {
+  display: none;
+  position: fixed;
+  bottom: 5px;
+  right: 5px;
+  z-index: 1;
+  width: 225px;
+  height: auto;
+  border: 1px solid #333;
+  background-color: var(--background);
+  padding: 10px;
+  border-radius: 15px;
+  overflow: hidden;
+  text-align: center;
+}
+
 body {
   font-family: Ubuntu;
   color: var(--text);
