--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -864,7 +864,7 @@ main::-webkit-scrollbar-thumb {
 }
 .shop__cart #cart .cart__list .cart__list__description {
   display: flex;
-  flex-direction: column-reverse;
+  flex-direction: column;
   align-items: center;
   flex-wrap: wrap;
   justify-content: center;
@@ -876,6 +876,7 @@ main::-webkit-scrollbar-thumb {
   .shop__cart #cart .cart__list .cart__list__description {
     flex-wrap: nowrap;
     flex-direction: row;
+    justify-content: flex-start;
   }
 }
 .shop__cart #cart .cart__list .cart__list__description .list--divBtn {
@@ -886,7 +887,7 @@ main::-webkit-scrollbar-thumb {
 @media only screen and (min-width: 768px) {
   .shop__cart #cart .cart__list .cart__list__description .list--divBtn {
     display: flex;
-    flex-direction: column;
+    flex-direction: row-reverse;
     justify-content: center;
     align-items: center;
     position: relative;
