--- a/assets/sass/components/_shopCart.scss
+++ b/assets/sass/components/_shopCart.scss
@@ -21,7 +21,7 @@
             }
             .cart__list__description{
                 display: flex;
-                flex-direction: column-reverse;
+                flex-direction: column;
                 align-items: center;
                 flex-wrap: wrap;
                 justify-content: center;
@@ -31,6 +31,7 @@
                 @include responsive(768px){
                     flex-wrap: nowrap;
                     flex-direction: row;
+                    justify-content: flex-start;
                 }
                 .list--divBtn{
                     position: absolute;
@@ -38,7 +39,7 @@
                     width: 220%;
                     @include responsive(768px){
                         display: flex;
-                        flex-direction: column;
+                        flex-direction: row-reverse;
                         justify-content: center;
                         align-items: center;
                         position: relative;
