remove + and - button on the cart when on checkout page

--- a/assets/sass/components/_shopCart.scss
+++ b/assets/sass/components/_shopCart.scss
@@ -6,7 +6,7 @@
     span{
         @extend .pointer;
     }
-    #cart{
+    .cart{
         width: 75%;
         border-radius: 5px;
         .cart__list{
