--- a/assets/sass/components/_form.scss
+++ b/assets/sass/components/_form.scss
@@ -18,8 +18,8 @@ form {
         }
 
         input[type="number"] {
-            width:100px;
-            margin-right: 35%;
+            width:30%;
+            margin-right: 30%;
         }
 
         div {
