--- a/assets/sass/components/_main.scss
+++ b/assets/sass/components/_main.scss
@@ -7,14 +7,15 @@ main {
 
     #title {
         width:450px;
-        //margin-left: 10%;
+        margin-left: 0;
         @extend .flexColumnCenterCenter;
         h2 {
             font-size: 3.5rem;
             text-align: center;
             @include responsive(1183px) {
                 text-align: start;
-                margin-left: 10%;
+                margin-left: 80%;
+                width:600px;
             }
             @include responsive(600px) {
                 font-size: 5rem;
@@ -24,6 +25,7 @@ main {
 
     #seeOurStore {
         padding:10px;
+        margin-left: 0;
         border-radius: 5px;
         background: linear-gradient(90deg, var(--background2) 0%, var(--background3) 100%);
         @extend .pointer;
@@ -31,6 +33,7 @@ main {
         align-self: center;
         @include responsive(1183px) {
             align-self: flex-start;
+            margin-left: 23%;
         }
     }
     #seeOurStore:hover {
